logs/debug.log
INFO 2026-02-22 20:23:00,626 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:23:46,992 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:23:51,148 basehttp "GET / HTTP/1.1" 200 13066
INFO 2026-02-22 20:23:51,256 basehttp "GET /static/js/main.js HTTP/1.1" 200 16949
WARNING 2026-02-22 20:23:51,594 log Not Found: /favicon.ico
WARNING 2026-02-22 20:23:51,595 basehttp "GET /favicon.ico HTTP/1.1" 404 5376
INFO 2026-02-22 20:24:11,179 basehttp "GET / HTTP/1.1" 200 13066
INFO 2026-02-22 20:24:11,223 basehttp "GET /static/css/style.css HTTP/1.1" 200 19460
INFO 2026-02-22 20:24:11,227 basehttp "GET /static/js/main.js HTTP/1.1" 200 16949
INFO 2026-02-22 20:24:20,316 basehttp "GET / HTTP/1.1" 200 13066
INFO 2026-02-22 20:24:20,341 basehttp "GET /static/css/style.css HTTP/1.1" 200 19460
INFO 2026-02-22 20:24:20,343 basehttp "GET /static/js/main.js HTTP/1.1" 200 16949
WARNING 2026-02-22 20:24:20,739 log Not Found: /favicon.ico
WARNING 2026-02-22 20:24:20,741 basehttp "GET /favicon.ico HTTP/1.1" 404 5376
INFO 2026-02-22 20:24:46,616 basehttp "GET / HTTP/1.1" 200 13066
INFO 2026-02-22 20:24:46,639 basehttp "GET /static/js/main.js HTTP/1.1" 200 16949
INFO 2026-02-22 20:24:46,640 basehttp "GET /static/css/style.css HTTP/1.1" 200 19460
WARNING 2026-02-22 20:24:46,833 log Not Found: /favicon.ico
WARNING 2026-02-22 20:24:46,834 basehttp "GET /favicon.ico HTTP/1.1" 404 5376
ERROR 2026-02-22 20:29:38,591 log Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'static'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\bibhu\Blood Bank Management System\blood_bank\testapp\views.py", line 35, in home
    return render(request, 'testapp/home.html', context)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loader.py", line 62, in render_to_string
    return template.render(context, request)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\backends\django.py", line 107, in render
    return self.template.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 171, in render
    return self._render(context)
           ~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 163, in _render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 1016, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 977, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loader_tags.py", line 134, in render
    compiled_parent = self.get_parent(context)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loader_tags.py", line 131, in get_parent
    return self.find_template(parent, context)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loader_tags.py", line 109, in find_template
    template, origin = context.template.engine.find_template(
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        template_name,
        ^^^^^^^^^^^^^^
        skip=history,
        ^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\bibhu\Django 11.30AM\.venv\Lib\site-packages\django\template\base.py", line 577, in invalid_block_tag
    raise self.error(
    ...<3 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 18: 'static'. Did you forget to register or load this tag?
ERROR 2026-02-22 20:29:38,598 basehttp "GET / HTTP/1.1" 500 198627
INFO 2026-02-22 20:30:32,866 basehttp "GET / HTTP/1.1" 200 13147
INFO 2026-02-22 20:30:33,131 basehttp "GET /static/favicon.png HTTP/1.1" 200 1487764
INFO 2026-02-22 20:30:43,021 basehttp "GET /login/ HTTP/1.1" 200 7585
INFO 2026-02-22 20:30:48,179 basehttp "POST /login/ HTTP/1.1" 200 7849
INFO 2026-02-22 20:30:56,935 basehttp "POST /login/ HTTP/1.1" 200 7849
INFO 2026-02-22 20:31:00,650 basehttp "GET /register/ HTTP/1.1" 200 13446
INFO 2026-02-22 20:31:11,177 basehttp "GET /about/ HTTP/1.1" 200 10840
INFO 2026-02-22 20:31:12,284 basehttp "GET / HTTP/1.1" 200 13147
INFO 2026-02-22 20:32:43,787 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:32:46,014 basehttp "GET / HTTP/1.1" 200 13147
WARNING 2026-02-22 20:32:53,893 log Not Found: /api/auth/get
WARNING 2026-02-22 20:32:53,894 basehttp "GET /api/auth/get HTTP/1.1" 404 5379
WARNING 2026-02-22 20:33:10,655 log Not Found: /api/auth/login
WARNING 2026-02-22 20:33:10,656 basehttp "GET /api/auth/login HTTP/1.1" 404 5385
INFO 2026-02-22 20:36:25,345 autoreload C:\Users\bibhu\Blood Bank Management System\blood_bank\blood_bank\urls.py changed, reloading.
INFO 2026-02-22 20:36:25,877 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:36:46,560 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:38:50,012 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:40:48,412 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:44:52,069 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:49:33,251 autoreload Watching for file changes with StatReloader
INFO 2026-02-22 20:49:36,025 basehttp "GET / HTTP/1.1" 200 13147
INFO 2026-02-22 20:49:47,212 basehttp "GET /static/favicon.png HTTP/1.1" 304 0
INFO 2026-02-22 20:49:48,266 basehttp "GET / HTTP/1.1" 200 13147
INFO 2026-02-22 20:49:48,367 basehttp "GET /static/css/style.css HTTP/1.1" 200 19460
INFO 2026-02-22 20:49:48,367 basehttp "GET /static/js/main.js HTTP/1.1" 200 16949
INFO 2026-02-22 20:49:48,927 basehttp "GET /static/favicon.png HTTP/1.1" 200 1487764
INFO 2026-02-22 20:49:50,592 basehttp "GET /about/ HTTP/1.1" 200 10840
INFO 2026-02-22 20:49:51,488 basehttp "GET /donors/search/ HTTP/1.1" 200 10687
INFO 2026-02-22 20:49:52,439 basehttp "GET /contact/ HTTP/1.1" 200 12210
INFO 2026-02-22 20:49:53,423 basehttp "GET /login/ HTTP/1.1" 200 7585
INFO 2026-02-22 20:49:56,151 basehttp "GET / HTTP/1.1" 200 13147
WARNING 2026-02-22 20:50:25,515 log Method Not Allowed: /api/v1/auth/login/
WARNING 2026-02-22 20:50:25,516 basehttp "GET /api/v1/auth/login/ HTTP/1.1" 405 40
